--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.4.1"
   },
   "devDependencies": {
+    "annyang": "^2.6.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
