--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Thomas Seitz",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^0.4.1",
     "electron": "^1.4.10",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "ical": "^0.5.0",
     "moment": "^2.17.0",
+    "pug": "^2.0.0-beta6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
