--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "feed-read": "0.0.1",
     "gulp": "^3.9.1",
     "vinyl-source-stream": "^1.1.0"
   }
