--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "moment": "^2.17.0",
     "pug": "^2.0.0-beta6",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "socket.io": "^1.7.1",
+    "socket.io-client": "^1.7.1"
   },
   "devDependencies": {
     "annyang": "^2.6.0",
@@ -27,7 +29,11 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "bufferutil": "^1.3.0",
     "gulp": "^3.9.1",
+    "onoff": "^1.1.1",
+    "rpi-gpio": "^0.7.0",
+    "utf-8-validate": "^1.2.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
