--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^0.4.1",
+    "cheerio": "^0.22.0",
     "electron": "^1.4.10",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
